<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DeviceLockController</string>
    <string name="next_button">Next</string>
    <string name="reset_button">Reset</string>
    <string name="setup_more_button">More</string>
    <string name="setup_info_title_text">How <xliff:g id="creditor_app">%1$s</xliff:g> can manage this device</string>
    <string name="setup_failed_title_text">Can\'t install <xliff:g id="creditor_app">%1$s</xliff:g> app</string>
    <string name="setup_failed_reset_device_text">Resetting device to try again.</string>
    <string name="setup_failed_reset_device_timer_text">
        {count, plural,
            =1    {Reset this device, then try setting it up again. It\'ll reset automatically in 1 second.}
            other {Reset this device, then try setting it up again. It\'ll reset automatically in # seconds.}
        }
    </string>
    <string name="setup_progress_title_text">Installing <xliff:g id="creditor_app">%1$s</xliff:g> app<xliff:g id="ellipsis">\u2026</xliff:g></string>
    <string name="setup_finish_title_text">Opening <xliff:g id="creditor_app">%1$s</xliff:g> app<xliff:g id="ellipsis">\u2026</xliff:g></string>
    <string name="setup_error_title_text">Can\'t open <xliff:g id="creditor_app">%1$s</xliff:g> app</string>
    <string name="try_again">Try again</string>
    <string name="reset_phone">Reset phone</string>
    <string name="control_section_title">What can <xliff:g id="creditor_app">%1$s</xliff:g> do\u003F</string>
    <string name="control_lock_device_text">Restrict this device if you don\'t make a payment</string>
    <string name="control_download_text">Download, install, and update the <xliff:g id="creditor_app">%1$s</xliff:g> app</string>
    <string name="control_disable_debug_text">Turn off debugging features</string>
    <string name="locked_section_title">What works if this device is locked\u003F</string>
    <string name="locked_emergency_text">Emergency calling services</string>
    <string name="locked_phone_usage_text">Incoming and some outgoing calls</string>
    <string name="locked_settings_usage_text">Settings</string>
    <string name="locked_backup_and_restore_text"><![CDATA[<a href="https://support.google.com/android/answer/2819582">Backing up and restoring</a>]]> your data</string>
    <string name="exposure_section_title">What\'s visible to <xliff:g id="creditor_app">%1$s</xliff:g>\u003F</string>
    <string name="exposure_install_text">When the <xliff:g id="creditor_app">%1$s</xliff:g> app is installed or uninstalled</string>
    <string name="exposure_lock_unlock_text">Any lock or unlock requests from <xliff:g id="creditor_app">%1$s</xliff:g></string>
    <string name="exposure_disable_dlc_text">If the <xliff:g id="creditor_app">%1$s</xliff:g> app isn\'t available</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="footer_notice">The other management capabilities in <b>Settings > Security > Managed device info</b> don\'t apply to this device</string>
    <string name="footer_notice_content_description">The management capabilities in the financed device section of Security settings don\'t apply to this device.</string>
    <string name="device_provided_by_provider">This device is provided by <xliff:g id="provider name">%1$s</xliff:g></string>
    <string name="download_kiosk_app">The Kiosk app will be downloaded and installed automatically</string>
    <string name="install_kiosk_app_secondary_user">The Kiosk app will be installed for this user</string>
    <string name="restrict_device_if_missing_payment"><xliff:g id="provider name">%1$s</xliff:g> can restrict this device if you miss a payment</string>
    <string name="restrict_device_if_dont_make_payment"><xliff:g id="provider name">%1$s</xliff:g> can restrict this device if you don\'t make the necessary payments. For details, view the <xliff:g id="terms_and_conditions_link_start">&lt;a href="%2$s"></xliff:g>Terms &amp; Conditions<xliff:g id="terms_and_conditions_link_end">&lt;/a&gt;</xliff:g>.</string>
    <string name="restrict_device_if_owner_doesnt_make_payment"><xliff:g id="provider name">%1$s</xliff:g> can restrict this device if the owner doesn\'t make payments</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="do_it_in_one_hour">Do it in 1 hour</string>
    <string name="header_icon_content_description">Info</string>
    <string name="provision_info_item_icon_content_description">Provision info</string>
    <string name="enroll_your_device_header">Enroll your device</string>
    <string name="enroll_your_device_financing_subheader">You can now enroll your device in <xliff:g id="provider name">%1$s</xliff:g>\'s financing program</string>
    <string name="enroll_your_device_subsidy_subheader">You can now enroll your device in <xliff:g id="provider name">%1$s</xliff:g>\'s subsidy program</string>
    <string name="subsidy_program_header">You\'re on <xliff:g id="provider name">%1$s</xliff:g>\'s subsidy program</string>
    <string name="device_enrollment_header_text">Device enrollment</string>
    <string name="device_financing_enrollment_body_text">Your device will be enrolled in <xliff:g id="provider name">%1$s</xliff:g>\'s finance program within 30 days</string>
    <string name="device_subsidy_enrollment_body_text">Your device will be enrolled in <xliff:g id="provider name">%1$s</xliff:g>\'s subsidy program within 30 days</string>
    <string name="device_enrollment_notification_body_text">Enrollment will resume at <xliff:g id="time">%1$s</xliff:g>. You can continue using your device. </string>
    <string name="continue_using_device">You can continue using your device</string>
    <string name="device_paid">You paid for your device</string>
    <string name="device_removed_from_subsidy_program">Device removed from <xliff:g id="provider name">%1$s</xliff:g> subsidy program</string>
    <string name="device_removed_from_finance_program">Your device has been removed from <xliff:g id="provider name">%1$s</xliff:g>\'s finance program</string>
    <string name="restrictions_lifted">All restrictions on your device have been lifted</string>
    <string name="uninstall_kiosk_app">You can uninstall the Kiosk app from your device</string>
    <string name="getting_device_ready">Getting your device ready&#8230;</string>
    <string name="this_may_take_a_few_minutes">This may take a few minutes</string>
    <string name="installing_kiosk_app">Installing <xliff:g id="creditor_app">%1$s</xliff:g> app&#8230;</string>
    <string name="opening_kiosk_app">Opening <xliff:g id="creditor_app">%1$s</xliff:g> app&#8230;</string>
    <string name="settings_banner_title">Device provided by <xliff:g id="provider name">%1$s</xliff:g></string>
    <string name="settings_banner_body"><xliff:g id="provider name">%1$s</xliff:g> can change settings on this device</string>
    <string name="settings_banner_button">Learn more</string>
    <string name="settings_screen_title">Financed device info</string>
    <string name="settings_intro">Your credit provider can change settings and install the Kiosk app on the device.\n\n<xliff:g id="provider name">%1$s</xliff:g> may restrict this device if you don\u2019t make the necessary payments or stop using <xliff:g id="provider name">%1$s</xliff:g>\u2019s SIM.\n\nTo learn more, contact <xliff:g id="provider name">%1$s</xliff:g>.</string>
    <string name="settings_intro_preference_key">settings_intro_preference_key</string>
    <string name="settings_restrictions_category">Until you\u2019ve paid for your device, you can\u2019t:</string>
    <string name="settings_restrictions_category_preference_key">settings_restrictions_category_preference_key</string>
    <string name="settings_install_apps">Install apps from outside the Play Store</string>
    <string name="settings_install_apps_preference_key">settings_install_apps_preference_key</string>
    <string name="settings_safe_mode">Reboot your device into safe mode</string>
    <string name="settings_safe_mode_preference_key">settings_safe_mode_preference_key</string>
    <string name="settings_config_date_time">Change date, time, and time zones</string>
    <string name="settings_config_date_time_preference_key">settings_config_date_time_preference_key</string>
    <string name="settings_developer_options">Use developer options</string>
    <string name="settings_developer_options_preference_key">settings_developer_options_preference_key</string>
    <string name="settings_credit_provider_capabilities_category">If something goes wrong with your device, <xliff:g id="provider name">%1$s</xliff:g> can:</string>
    <string name="settings_credit_provider_capabilities_category_preference_key">settings_credit_provider_capabilities_category_preference_key</string>
    <string name="settings_IMEI">Access your IMEI number</string>
    <string name="settings_IMEI_preference_key">settings_IMEI_preference_key</string>
    <string name="settings_factory_reset">Factory reset your device</string>
    <string name="settings_factory_reset_preference_key">settings_factory_reset_preference_key</string>
    <string name="settings_locked_mode_category">If your device is restricted, you can only use it to:</string>
    <string name="settings_locked_mode_category_preference_key">settings_locked_mode_category_preference_key</string>
    <string name="settings_emergency_calls">Make calls to emergency numbers</string>
    <string name="settings_emergency_calls_preference_key">settings_emergency_calls_preference_key</string>
    <string name="settings_system_info">View system info like date, time, network status, and battery</string>
    <string name="settings_system_info_preference_key">settings_system_info_preference_key</string>
    <string name="settings_turn_on_off_device">Turn your device on or off</string>
    <string name="settings_turn_on_off_device_preference_key">settings_turn_on_off_device_preference_key</string>
    <string name="settings_notifications">View notifications and text messages</string>
    <string name="settings_notifications_preference_key">settings_notifications_preference_key</string>
    <string name="settings_allowlisted_apps">Access apps that are allowed by <xliff:g id="provider name">%1$s</xliff:g></string>
    <string name="settings_allowlisted_apps_preference_key">settings_allowlisted_apps_preference_key</string>
    <string name="settings_fully_paid_category">Once you pay the full amount:</string>
    <string name="settings_fully_paid_category_preference_key">settings_fully_paid_category_preference_key</string>
    <string name="settings_restrictions_removed"><xliff:g id="provider name">%1$s</xliff:g> can\u2019t restrict your device or change device settings</string>
    <string name="settings_restrictions_removed_preference_key">settings_restrictions_removed_preference_key</string>
    <string name="settings_uninstall_kiosk_app">You can uninstall the <xliff:g id="kiosk_app">%1$s</xliff:g> app</string>
    <string name="settings_uninstall_kiosk_app_preference_key">settings_uninstall_kiosk_app_preference_key</string>
    <string name="provision_notification_channel_name">Provision</string>
    <string name="device_reset_in_days_notification_title">
        {count, plural,
            =1    {Device will reset in 1 day}
            other {Device will reset in # days}
        }
    </string>
    <string name="device_reset_notification_content">All device data will be deleted. For help enrolling your device, contact <xliff:g id="provider name">%1$s</xliff:g></string>
    <string name="toast_message_grant_notification_permission">Please allow notification from DeviceLock to continue deferring the enrollment of the device.</string>
</resources>