<!--
  ~ Copyright (C) 2023 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/settings_screen_title">

    <com.android.settingslib.widget.TopIntroPreference
        android:key="@string/settings_intro_preference_key"
        android:title="@string/settings_intro"/>

    <PreferenceCategory android:key="@string/settings_restrictions_category_preference_key"
                        android:order="100"
                        android:title="@string/settings_restrictions_category"
                        android:contentDescription="@string/settings_restrictions_category">
        <Preference android:key="@string/settings_install_apps_preference_key"
                    android:order="110"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_install_apps"
                    android:selectable="false" />
        <Preference android:key="@string/settings_safe_mode_preference_key"
                    android:order="120"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_safe_mode"
                    android:selectable="false" />
        <Preference android:key="@string/settings_config_date_time_preference_key"
                    android:order="130"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_config_date_time"
                    android:selectable="false" />
        <Preference android:key="@string/settings_developer_options_preference_key"
                    android:order="140"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_developer_options"
                    android:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory android:key="@string/settings_credit_provider_capabilities_category_preference_key"
                        android:order="200"
                        android:title="@string/settings_credit_provider_capabilities_category"
                        android:contentDescription="@string/settings_credit_provider_capabilities_category">
        <Preference android:key="@string/settings_IMEI_preference_key"
                    android:order="210"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_IMEI"
                    android:selectable="false" />
        <Preference android:key="@string/settings_factory_reset_preference_key"
                    android:order="220"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_factory_reset"
                    android:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory android:key="@string/settings_locked_mode_category_preference_key"
                        android:order="300"
                        android:title="@string/settings_locked_mode_category"
                        android:contentDescription="@string/settings_locked_mode_category">
        <Preference android:key="@string/settings_emergency_calls_preference_key"
                    android:order="310"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_emergency_calls"
                    android:selectable="false" />
        <Preference android:key="@string/settings_system_info_preference_key"
                    android:order="320"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_system_info"
                    android:selectable="false" />
        <Preference android:key="@string/settings_turn_on_off_device_preference_key"
                    android:order="330"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_turn_on_off_device"
                    android:selectable="false" />
        <Preference android:key="@string/settings_notifications_preference_key"
                    android:order="340"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_notifications"
                    android:selectable="false" />
        <Preference android:key="@string/settings_allowlisted_apps_preference_key"
                    android:order="350"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_allowlisted_apps"
                    android:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory android:key="@string/settings_fully_paid_category_preference_key"
                        android:order="400"
                        android:title="@string/settings_fully_paid_category"
                        android:contentDescription="@string/settings_fully_paid_category">
        <Preference android:key="@string/settings_restrictions_removed_preference_key"
                    android:order="410"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_restrictions_removed"
                    android:selectable="false" />
        <Preference android:key="@string/settings_uninstall_kiosk_app_preference_key"
                    android:order="420"
                    android:layout_height="wrap_content"
                    android:title="@string/settings_uninstall_kiosk_app"
                    android:selectable="false" />
    </PreferenceCategory>
</PreferenceScreen>
